# grafxviewer

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: Red_Car.mtl  eagle.lines  eagle.points  future_fighterjet.lines  future_fighterjet.points  lab.lines.dat.csv  lab.right.dat.csv  objconv.py  piratehead.lines  piratehead.points  redcar.lines  redcar.points
src/: 3dvector.h  CMakeLists.txt  app.cpp  app.h  appcomponent.cpp  appcomponent.h  component.cpp  component.h  drawingcontext.h  io.cpp  io.h  main.cpp  matrix.cpp  matrix.h  model.h  modelview.cpp  modelview.h
test/: CMakeLists.txt  matrixtest.cpp  transtest.cpp
